# play-stm32

./: Cargo.toml  memory.x  openocd.gdb
.cargo/: config
src/: main.rs
