[package]
name = "stm32"
version = "0.1.0"
authors = ["Vasiliy Bannikov <vab-999@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1.0.0"
cortex-m = "0.7.1"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f407"] # replace the model of your microcontroller here